# openwebui-token-tracking

./: pyproject.toml
src/openwebui_token_tracking/: sponsored.py  tracking.py  utils.py
src/openwebui_token_tracking/actions/: credit_balance.py
src/openwebui_token_tracking/cli/commands/: sponsored.py
src/openwebui_token_tracking/db/: sponsored.py
src/openwebui_token_tracking/migrations/alembic/versions/: 10d29ec2fd0a_create_sponsored_allowance_table.py  rename_daily_to_monthly_credit_limit.py
src/openwebui_token_tracking/pipes/: anthropic.py  azure_openai.py  base_tracked_pipe.py  google_genai.py
test/: fixtures.py  test_tracking.py
